@@ -35,6 +35,7 @@ ENH: TParameterModule added caching support (Qiang)
 ENH: Added TAuthManager.switchUser() (Qiang)
 NEW: Added TDbLogRoute (Qiang)
 NEW: Added TDataRenderer and TItemDataRenderer (Qiang)
+NEW: Added THtmlElement (Qiang)
 NEW: Ticket#544 - Added TXCache (Wei)
 NEW: Ticket#729 - Added TActivePager (Christophe)
 NEW: Ticket#791 - Added TFirebugLogRoute (Christophe)
